margin top decrease

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,8 +331,9 @@ header .navbar ul li a:hover {
   .socials {
     margin-top: 12rem;
   }
+  /* Margin-top ==>>> changes -12 rem to 1 rem. */
   .home .image img {
-    margin-top: -12rem;
+    margin-top: 1rem;
   }
   .home .content p {
     font-size: 2.2rem;
